welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: ')' expected but '<-' found.
      fot(j<-1 to 7 ){
           ^