welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {
      var s=0
      fot(j<-1 to 7 ){
        while(estSurBiscuit()==false){
            avance()
            s=s+1}
           prendBiscuit()
                     
        for (i<-1 to s ){
	     recule()      }
	     poseBiscuit()
	droite()
	avance()
	gauche() }
  }